Source/Alternet.UI.Pal/Api/WxOtherFactory.Api.h

ALTERNET_UI_API c_bool WxOtherFactory_FsWatcherAddTree_(void* handle, const char16_t* path, int events, const char16_t* filter)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::FsWatcherAddTree(handle, path, events, filter);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int WxOtherFactory_FsWatcherGetWatchedPathsCount_(void* handle)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return WxOtherFactory::FsWatcherGetWatchedPathsCount(handle);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_FsWatcherRemove_(void* handle, const char16_t* path)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::FsWatcherRemove(handle, path);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_FsWatcherRemoveAll_(void* handle)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::FsWatcherRemoveAll(handle);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_FsWatcherRemoveTree_(void* handle, const char16_t* path)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::FsWatcherRemoveTree(handle, path);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void WxOtherFactory_FsWatcherSetOwner_(void* handle, void* handler)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        WxOtherFactory::FsWatcherSetOwner(handle, handler);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* WxOtherFactory_SoundCreate_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return WxOtherFactory::SoundCreate();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* WxOtherFactory_SoundCreate2_(const char16_t* fileName, c_bool isResource)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return WxOtherFactory::SoundCreate2(fileName, isResource);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* WxOtherFactory_SoundCreate4_(uint64_t size, void* data)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return WxOtherFactory::SoundCreate4(size, data);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void WxOtherFactory_SoundDelete_(void* handle)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        WxOtherFactory::SoundDelete(handle);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_SoundPlay2_(const char16_t* filename, uint32_t flags)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::SoundPlay2(filename, flags);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_SoundPlay_(void* handle, uint32_t flags)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::SoundPlay(handle, flags);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void WxOtherFactory_SoundStop_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        WxOtherFactory::SoundStop();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_SoundIsOk_(void* handle)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::SoundIsOk(handle);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void WxOtherFactory_UIActionSimulatorDelete_(void* handle)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        WxOtherFactory::UIActionSimulatorDelete(handle);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* WxOtherFactory_UIActionSimulatorCreate_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorCreate();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorChar_(void* handle, int keycode, int modifiers)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorChar(handle, keycode, modifiers);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorKeyDown_(void* handle, int keycode, int modifiers)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorKeyDown(handle, keycode, modifiers);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorKeyUp_(void* handle, int keycode, int modifiers)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorKeyUp(handle, keycode, modifiers);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorMouseClick_(void* handle, int button)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorMouseClick(handle, button);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorMouseDblClick_(void* handle, int button)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorMouseDblClick(handle, button);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorMouseDown_(void* handle, int button)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorMouseDown(handle, button);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorMouseDragDrop_(void* handle, int64_t x1, int64_t y1, int64_t x2, int64_t y2, int button)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorMouseDragDrop(handle, x1, y1, x2, y2, button);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorMouseMove_(void* handle, PointI point)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorMouseMove(handle, point);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorMouseUp_(void* handle, int button)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorMouseUp(handle, button);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorSelect_(void* handle, const char16_t* text)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorSelect(handle, text);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool WxOtherFactory_UIActionSimulatorText_(void* handle, const char16_t* text)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return WxOtherFactory::UIActionSimulatorText(handle, text);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void WxOtherFactory_UIActionSimulatorYield_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        WxOtherFactory::UIActionSimulatorYield();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}