Source/Alternet.UI/Native/WxOtherFactory.Generated.cs

            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_FsWatcherAddTree_(System.IntPtr handle, string path, int events, string filter);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int WxOtherFactory_FsWatcherGetWatchedPathsCount_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_FsWatcherRemove_(System.IntPtr handle, string path);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_FsWatcherRemoveAll_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_FsWatcherRemoveTree_(System.IntPtr handle, string path);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WxOtherFactory_FsWatcherSetOwner_(System.IntPtr handle, System.IntPtr handler);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr WxOtherFactory_SoundCreate_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr WxOtherFactory_SoundCreate2_(string fileName, bool isResource);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr WxOtherFactory_SoundCreate4_(ulong size, System.IntPtr data);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WxOtherFactory_SoundDelete_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_SoundPlay2_(string filename, uint flags);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_SoundPlay_(System.IntPtr handle, uint flags);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WxOtherFactory_SoundStop_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_SoundIsOk_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WxOtherFactory_UIActionSimulatorDelete_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr WxOtherFactory_UIActionSimulatorCreate_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorChar_(System.IntPtr handle, int keycode, int modifiers);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorKeyDown_(System.IntPtr handle, int keycode, int modifiers);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorKeyUp_(System.IntPtr handle, int keycode, int modifiers);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorMouseClick_(System.IntPtr handle, int button);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorMouseDblClick_(System.IntPtr handle, int button);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorMouseDown_(System.IntPtr handle, int button);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorMouseDragDrop_(System.IntPtr handle, long x1, long y1, long x2, long y2, int button);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorMouseMove_(System.IntPtr handle, Alternet.Drawing.PointI point);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorMouseUp_(System.IntPtr handle, int button);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorSelect_(System.IntPtr handle, string text);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WxOtherFactory_UIActionSimulatorText_(System.IntPtr handle, string text);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WxOtherFactory_UIActionSimulatorYield_();
            
        }
    }
}
